<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_main"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/documentacion"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="371dp"
        android:layout_marginBottom="691dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/documentacion"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/libro_abierto" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintVertical_bias="0.500">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/texto_inicio"
            android:textColor="@color/blanco_tenue"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/tipo_operacion"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_operaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_color"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/btn_envio_operaciones"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>